# SchoolManagement

./: .env  .env.development  .env.example  .env.local  .env.production  .gitignore  Dockerfile  Procfile  README.md  SETUP_LOG.md  _tmp_migrate_to_local.py  alembic.ini  api-test-results.md  apis-testing.md  db.sqlite3  docker-compose.yml  functionality.md  implementation.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.md  requirements.txt  school_erp_backup.sql  tailwind.config.js  test-plan.md  vite.config.js
__MACOSX/: ._Dockerfile  ._Procfile  ._README.md  ._SETUP_LOG.md  ._alembic.ini  ._api-test-results.md  ._apis-testing.md  ._docker-compose.yml  ._docs  ._implementation.md  ._pyproject.toml  ._requirements.txt  ._runtime.txt  ._school_erp_backup.sql  ._specs  ._test-plan.md  ._uploads
__MACOSX/alembic/: ._env.py  ._script.py.mako
__MACOSX/docs/: ._DEPLOYMENT_GODADDY.md  ._DEPLOYMENT_RAILWAY.md
__MACOSX/seed-data/: ._login.sh  (+9 more)
alembic/: env.py
config/: settings.py  urls.py
docs/: ACADEMIC_YEAR_CLONE_IMPLEMENTATION.md  ACADEMIC_YEAR_TRANSITION_PLAN.md  DEPLOYMENT_GODADDY.md  DEPLOYMENT_RAILWAY.md  FK_CASCADE_REFERENCE.md  LIST_API_GUIDELINES.md  api-integration.md
public/: .htaccess
scripts/: setup-school.sh
seed-data/: login.sh  seed-all.sh  seed-examinations.sh  seed-fees.sh  seed-notifications.sh  seed-students.sh  seed-teachers.sh  seed-timetable.sh  seed-transport.sh  students_200.json
specs/: data-model-visual.md  data-model.md  endpoints-summary.md
src/: App.jsx  constants.jsx  index.css  main.jsx  main.py
(+484 files in other folders)
